# online_store_homework

./: .env.semple  .gitignore  README.md  config.py  product_fixture.json  pyproject.toml  requirements.txt
blogs/: forms.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_alter_blog_image.py
blogs/templates/blogs/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py  0002_alter_product_description_alter_product_image_and_more.py  0003_alter_category_description_alter_product_description.py  0004_alter_product_image.py  0005_alter_product_options_product_is_published_and_more.py  0006_product_views_alter_product_owner.py  0007_alter_product_category_alter_product_is_published.py
catalog/templates/catalog/: base.html  catalog.html  category_list.html  category_product.html  contacts.html  entrance.html  home.html  product_add.html  product_confirm_delete.html  product_detail.html  product_form.html  product_info.html  product_list.html  registration.html
config/: settings.py  urls.py
fixtures/: blog_fixture.json  catalog_fixture.json  groups.json  groups_fixture.json  product_fixture.json  users_fixture.json
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_phone_number.py
users/templates/: login.html
users/templates/users/: login.html  (+2 more)
(+3 files in other folders)
